# dj_jobportal

./: README.md  db.sqlite3  pyproject.toml
apps/core/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/core/templates/: base.html  home.html
apps/core/templates/authentication/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html
apps/core/templates/email/: activation.html  password_reset.html
apps/core/templates/registration/: login.html
apps/job_portal/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/job_portal/migrations/: 0001_initial.py  0002_alter_application_job.py  0003_skill_application_status_job_applicants_and_more.py
config/: urls.py
config/settings/: base.py
frontend/job_portal/: package-lock.json  package.json
frontend/job_portal/src/: App.tsx  index.tsx
frontend/job_portal/src/Store/: store.ts
frontend/job_portal/src/Store/Slice/auth/: authActions.js  authInterceptor.js  authSlice.js
frontend/job_portal/src/api/: apiRequest.tsx
frontend/job_portal/src/components/: Applications.tsx  HomePage.tsx  JobDetailPage.tsx  JobListings.tsx  LandingPage.tsx  Navbar.tsx  SignIn.tsx  SignUp.tsx
frontend/job_portal/src/utils/: axiosConfig.ts  notify.tsx
